--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build &&  zip -r build.zip build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve":" unzip -o build.zip && npx pm2 serve ./build 3000 --name 'dashboard' --spa"
+    "serve":" unzip -o build.zip && npx pm2 restart dashboard"
   },
   "eslintConfig": {
     "extends": [
