--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -12,5 +12,5 @@ jobs:
           username: ec2-user
           key: ${{ vars.DEPLOY_KEY }}
           script: |
-            cd ~/home/ec2-user/ptdapm-fe
+            cd ptdapm-fe
             npm run serve
