--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -13,4 +13,6 @@ jobs:
           key: ${{ vars.DEPLOY_KEY }}
           script: |
             cd ptdapm-fe
+            ls -a
+            cat package.json
             npm run serve
