--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -13,6 +13,7 @@ jobs:
           key: ${{ vars.DEPLOY_KEY }}
           script: |
             cd ptdapm-fe
+            pwd
             ls -a
             cat package.json
             npm run serve
