--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -12,8 +12,7 @@ jobs:
           username: ec2-user
           key: ${{ vars.DEPLOY_KEY }}
           script: |
-            cd ptdapm-fe
+            cd ~/home/ec2-user/ptdapm-fe
             pwd
-            ls -a
             cat package.json
             npm run serve
