--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -14,8 +14,8 @@ jobs:
         uses: easingthemes/ssh-deploy@v2.1.4
         env:
           SSH_PRIVATE_KEY: ${{ vars.DEPLOY_KEY }}
-          REMOTE_HOST: ${{ vars.DEPLOY_HOST }}
-          REMOTE_USER: ${{ vars.DEPLOY_USER }}
+          REMOTE_HOST: 18.210.233.30
+          REMOTE_USER: ec2-user
           REMOTE_PORT: 22
           TARGET: /home/ec2-user/ptdapm-fe
           SOURCE: "build.zip"
