--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.2.1",
     "classnames": "^2.3.2",
     "eslint-plugin-react": "^7.32.2",
+    "events": "^3.3.0",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "process": "^0.11.10",
