--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.3",
     "chart.js": "^4.2.1",
     "classnames": "^2.3.2",
+    "draft-js": "^0.11.7",
     "eslint-plugin-react": "^7.32.2",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
@@ -19,6 +20,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
